--- a/frontend/package.json
+++ b/frontend/package.json
@@ -124,6 +124,8 @@
   "dependencies": {
     "@lucide/svelte": "^0.564.0",
     "@types/d3": "^7.4.3",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "d3": "^7.9.0",
